# koava

./: .gitignore  Cargo.toml  FEATURES.md  LICENSE  MANIFEST.in  README.md  custom_config.json  pyproject.toml  test_matches
.github/workflows/: basic-test.yml  ci.yml  koava-release.yml
proptest-regressions/: config.txt  store.txt
protocol/: Cargo.toml
protocol/src/api/: auth.rs  mod.rs  model.rs
protocol/src/common/: auth.rs  key.rs  mod.rs  model.rs
src/: auth.rs  cli.rs  client.rs  config.rs  encrypt.rs  error.rs  file.rs  huggingface.rs  key.rs  main.rs  model.rs  policy.rs  push.rs  security.rs  store.rs  templates.rs  ui.rs  upload.rs  utils.rs  version.rs
src/tests/: mocks.rs  mod.rs  utils.rs
templates/: KOALAVAULT_PROPRIETARY_LICENSE.txt  README_ENCRYPTED_MODEL.md
