[package]
name = "koava"
version = "0.1.0"
edition = "2021"
description = "KoalaVault model converter tool for producers"
authors = ["KoalaVault Team"]
license = "Proprietary"
readme = "README.md"

[[bin]]
name = "koava"
path = "src/main.rs"

[dependencies]
# Core cryptotensors library from open-cryptotensors (local path for development)
cryptotensors = { path = "../open-cryptotensors/safetensors" }

# CLI framework
clap = { version = "4.0", features = ["derive", "color"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# File system operations
walkdir = "2.0"

# Progress bars and UI
indicatif = "0.17"
owo-colors = "4.0"
console = "0.15"
dialoguer = "0.11"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Path handling
path-absolutize = "3.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
dirs = "5.0"
config = "0.14"

# Command line tool detection
which = "4.0"

# Unicode width calculation
unicode-width = "0.1"

# Cryptographic operations
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"

# Regex
regex = "1"

