[package]
name = "koava"
version = "0.1.1"
edition = "2021"
description = "KoalaVault model converter tool for producers"
authors = ["KoalaVault Team"]
license = "Apache-2.0"
readme = "README.md"

[[bin]]
name = "koava"
path = "src/main.rs"

[features]
# Certificate pinning for production security (optional)
# Note: cert-pinning feature is implemented directly in config.rs
cert-pinning = []

[dependencies]
# Core cryptotensors library from crates.io
cryptotensors = "0.2.0"

# CLI framework
clap = { version = "4.0", features = ["derive", "color"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# File system operations
walkdir = "2.0"

# Progress bars and UI
indicatif = "0.17"
owo-colors = "4.0"
console = "0.15"
dialoguer = "0.11"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Path handling
path-absolutize = "3.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
dirs = "5.0"
config = "0.14"

# Command line tool detection
which = "4.0"

# Unicode width calculation
unicode-width = "0.1"

# Cryptographic operations
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"

# Regex
regex = "1"

# Parallel processing
rayon = "1.8"

# Unix system calls
nix = { version = "0.29", features = ["fs"] }
libc = "0.2"

# Protocol
koalavault-protocol = { path = "protocol" }

# Cryptographic operations for attestation
rsa = "0.9"
rand = "0.8"

# TLS and certificate pinning (used when cert-pinning feature is enabled)
rustls = "0.23"
tokio-rustls = "0.26"
url = "2.5"
webpki-roots = "1.0"
x509-parser = "0.18"

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
bytemuck = "1.15"
# Testing frameworks
mockall = "0.13"
proptest = "1.4"
fake = { version = "2.9", features = ["derive", "chrono"] }
wiremock = "0.6"

