[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "koava"
version = "0.1.0"
description = "KoalaVault model converter tool for producers"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "KoalaVault Team", email = "koalavaultx@gmail.com"}
]
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage = "https://www.koalavault.ai"
Repository = "https://github.com/koalavault/koalavault.ai"

[project.optional-dependencies]
huggingface = ["huggingface_hub[cli]>=0.16.0"]

[tool.maturin]
# Build configuration for Rust binary packaged as Python wheel
# maturin automatically detects [[bin]] in Cargo.toml and packages the binary
# This allows: pip install koava -> installs pre-compiled binary (no compilation needed)
manifest-path = "Cargo.toml"
features = []

[tool.maturin.sdist]
# Include source code in sdist for open source distribution
# Users can build from source: pip install koava --no-binary koava
include = [
    "README.md",
    "LICENSE",
    "templates/**/*",
    "protocol/**/*",
    "src/**/*.rs",
    "Cargo.toml",
    "Cargo.lock",
    "pyproject.toml",
    "MANIFEST.in",
    ".github/workflows/**/*",
]