[package]
name = "koalavault-protocol"
version = "0.1.0"
edition = "2021"
description = "Shared API data structures for KoalaVault"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
validator = { version = "0.20", features = ["derive"] }
rust_decimal = { version = "1.35", features = ["serde-float"] }
strum = { version = "0.27.2", features = ["derive"] }
